force-app/main/default/objects/CSR_Line__c/CSR_Line__c.object-meta.xml
<CustomObject>
    <label>CSR Line</label>
    <nameField>
        <label>Line#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSR Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>