force-app/main/default/objects/CSR_Line__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR</label>
    <referenceTo>CSR__c</referenceTo>
    <relationshipLabel>CSR Lines</relationshipLabel>
    <relationshipName>CSR_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>