force-app/main/default/objects/CSR_Line__c/fields/csr_Alert__c.field-meta.xml
<CustomField>
    <fullName>csr_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert</label>
    <type>Checkbox</type>
</CustomField>