force-app/main/default/objects/CSR_Line__c/fields/csr_Best_Net__c.field-meta.xml
<CustomField>
    <fullName>csr_Best_Net__c</fullName>
    <label>Best Net</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>