force-app/main/default/objects/CSR_Line__c/fields/csr_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>csr_Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <length>10</length>
    <type>Text</type>
</CustomField>