force-app/main/default/objects/CSR_Line__c/fields/csr_Case__c.field-meta.xml
<CustomField>
    <fullName>csr_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CSR Lines</relationshipLabel>
    <relationshipName>CSR_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>