force-app/main/default/objects/CSR_Line__c/fields/csr_Competitor__c.field-meta.xml
<CustomField>
    <fullName>csr_Competitor__c</fullName>
    <description>Competitor</description>
    <label>Competitor</label>
    <length>6</length>
    <type>Text</type>
</CustomField>