force-app/main/default/objects/CSR_Line__c/fields/csr_Competitor_Brand__c.field-meta.xml
<CustomField>
    <fullName>csr_Competitor_Brand__c</fullName>
    <label>Competitor Brand</label>
    <length>30</length>
    <type>Text</type>
</CustomField>