force-app/main/default/objects/CSR_Line__c/fields/csr_Competitor_P_N__c.field-meta.xml
<CustomField>
    <fullName>csr_Competitor_P_N__c</fullName>
    <label>Competitor P/N</label>
    <length>30</length>
    <type>Text</type>
</CustomField>