force-app/main/default/objects/CSR_Line__c/fields/csr_Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>csr_Competitor_Price__c</fullName>
    <description>Competitor Price</description>
    <label>Competitor Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>