force-app/main/default/objects/CSR_Line__c/fields/csr_Deny_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>csr_Deny_Reason_Code__c</fullName>
    <description>Deny Reason code</description>
    <label>Deny Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>