force-app/main/default/objects/CSR_Line__c/fields/csr_Discount__c.field-meta.xml
<CustomField>
    <fullName>csr_Discount__c</fullName>
    <label>Discount</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>