force-app/main/default/objects/CSR_Line__c/fields/csr_Exception_Comment__c.field-meta.xml
<CustomField>
    <fullName>csr_Exception_Comment__c</fullName>
    <description>Field to store Exception Comment</description>
    <label>Exception Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>