force-app/main/default/objects/CSR_Line__c/fields/csr_Landing_Cost__c.field-meta.xml
<CustomField>
    <fullName>csr_Landing_Cost__c</fullName>
    <description>csr_Landing_Cost</description>
    <label>Landing Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>