force-app/main/default/objects/CSR_Line__c/fields/csr_Marketing_Review__c.field-meta.xml
<CustomField>
    <fullName>csr_Marketing_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Review</label>
    <type>Checkbox</type>
</CustomField>