force-app/main/default/objects/CSR_Line__c/fields/csr_Number__c.field-meta.xml
<CustomField>
    <fullName>csr_Number__c</fullName>
    <description>CSR Number</description>
    <formula>csr_Case__r.CSR_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Number</label>
    <type>Text</type>
</CustomField>