force-app/main/default/objects/CSR_Line__c/fields/csr_Part_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>csr_Part_Type_Description__c</fullName>
    <label>Part Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>