force-app/main/default/objects/CSR_Line__c/fields/csr_Parts_Number__c.field-meta.xml
<CustomField>
    <fullName>csr_Parts_Number__c</fullName>
    <label>Parts Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>