force-app/main/default/objects/CSR_Line__c/fields/csr_Phase__c.field-meta.xml
<CustomField>
    <fullName>csr_Phase__c</fullName>
    <description>Phase of parent CSR</description>
    <formula>csr_Case__r.csr_Phase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>