force-app/main/default/objects/CSR_Line__c/fields/Csr_Price__c.field-meta.xml
<CustomField>
    <fullName>Csr_Price__c</fullName>
    <label>CSR Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>