force-app/main/default/objects/CSR_Line__c/fields/csr_Pricing_Alert__c.field-meta.xml
<CustomField>
    <fullName>csr_Pricing_Alert__c</fullName>
    <description>Field to store Pricing Alerts</description>
    <label>Pricing Alert</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>