force-app/main/default/objects/CSR_Line__c/fields/csr_Prior_Discount__c.field-meta.xml
<CustomField>
    <fullName>csr_Prior_Discount__c</fullName>
    <label>Prior Discount</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>