force-app/main/default/objects/CSR_Line__c/fields/csr_PRIOR_PPD_MRG__c.field-meta.xml
<CustomField>
    <fullName>csr_PRIOR_PPD_MRG__c</fullName>
    <label>PRIOR PPD MRG</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>