force-app/main/default/objects/CSR_Line__c/fields/csr_Prior_Price__c.field-meta.xml
<CustomField>
    <fullName>csr_Prior_Price__c</fullName>
    <label>Prior CSR Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>