force-app/main/default/objects/CSR_Line__c/fields/csr_Quantity__c.field-meta.xml
<CustomField>
    <fullName>csr_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>