force-app/main/default/objects/CSR_Line__c/fields/csr_Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>csr_Requested_Discount__c</fullName>
    <description>csr_Requested_Discount</description>
    <label>Requested Discount</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>