force-app/main/default/objects/CSR_Line__c/fields/csr_STDDLERNET__c.field-meta.xml
<CustomField>
    <fullName>csr_STDDLERNET__c</fullName>
    <description>csr_STDDLERNET</description>
    <label>STDDLERNET</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>