force-app/main/default/objects/CSR_Line__c/fields/csr_Stock_Class__c.field-meta.xml
<CustomField>
    <fullName>csr_Stock_Class__c</fullName>
    <label>Stock Class</label>
    <length>4</length>
    <type>Text</type>
</CustomField>