force-app/main/default/objects/CSR_Line__c/fields/csr_W_D__c.field-meta.xml
<CustomField>
    <fullName>csr_W_D__c</fullName>
    <label>W/D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WHS</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>